# kofa

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: advisors.md  test.md
.claude/rules/: database.md
.claude/skills/rettslig-analyse/: SKILL.md
docs/: ADR-001.md  ADR-002-search-improvements.md  HANDOFF-legal-mcp-analyse.md  PIPELINE-STATUS.md  TODO-referanseekstraksjon.md  forarbeider-analyse.md  kommentar-foa-16-10.md  lbsiv_avgjorelse_lb-2014-58107.html  lbsiv_avgjorelse_lb-2014-58107.txt  lbsiv_avgjorelse_lb-2017-156250.html  lbsiv_avgjorelse_lb-2017-156250.txt  lesiv_avgjorelse_le-2021-130025.html  lesiv_avgjorelse_le-2021-130025.txt  lesiv_avgjorelse_le-2022-19926.html  lesiv_avgjorelse_le-2022-19926.txt  lhsiv_avgjorelse_lh-2024-10855.html  lhsiv_avgjorelse_lh-2024-10855.txt  metode-rettslig-analyse.md  notat-grensedragning-16-10.md  notat-radighet-forpliktelseserklaring.md  rettskildeoversikt.md
docs/research/intervju-evaluering/: 01-referansetabell.md  02-fts-sok.md  03-semantisk-sok.md  04-lovtekst-forarbeider.md  05-konsolidert-kandidatliste.md  06-screening-batch1.md  (+2 more)
migrations/: 001_kofa_schema.sql  002_kofa_references.sql  003_kofa_most_cited.sql  004_regulation_version.sql  005_eu_references.sql  006_kofa_forarbeider.sql
scripts/: embed_forarbeider.py  embed_kofa.py
src/kofa/: __init__.py  _supabase_utils.py  cli.py  eurlex_fetcher.py  forarbeider_extractor.py  pdf_extractor.py  reference_extractor.py  scraper.py  server.py  service.py  supabase_backend.py  vector_search.py  web.py
